[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/GUI/Chat.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/IBMPlexSerif-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/IBMPlexSerif-BoldItalic.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Fonts/IBMPlexSerif-Italic.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Assets/Fonts/IBMPlexSerif-Regular.ttf"

[sub_resource type="DynamicFont" id=7]
font_data = SubResource( 6 )

[node name="Chatbox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 414.0
margin_right = -672.0
margin_bottom = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ChatContainer" type="VBoxContainer" parent="."]
margin_right = 346.0
margin_bottom = 181.0

[node name="ChatBox" type="RichTextLabel" parent="ChatContainer"]
margin_right = 346.0
margin_bottom = 153.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_italics_font = SubResource( 2 )
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="EditContainer" type="HBoxContainer" parent="ChatContainer"]
margin_top = 157.0
margin_right = 346.0
margin_bottom = 181.0

[node name="Label" type="Label" parent="ChatContainer/EditContainer"]
margin_top = 5.0
margin_right = 29.0
margin_bottom = 19.0
text = "[Say]"

[node name="LineEdit" type="LineEdit" parent="ChatContainer/EditContainer"]
margin_left = 33.0
margin_right = 346.0
margin_bottom = 24.0
size_flags_horizontal = 3
